--- a/src/index.scss
+++ b/src/index.scss
@@ -19,10 +19,6 @@ code {
     monospace;
 }
 
-.wrapper{
-
-}
-
 
 // header
 header{
@@ -72,21 +68,102 @@ header{
       font-family: 'Jaguar Bold';
       font-size: 24px;
   
-      .fly{
-        color: #A44546;
-      }
+      
     }
   } 
   
 }
 
-.flight-search{
-  display: flex;
-  justify-content: center;
-  width: 1312px;
+.fly{
+  color: #A44546;
+}
 
-  margin: 0 auto;
-  padding-top: 300px;
+
+.intro{
+  position: relative;
+  .wind{
+    width: 96%;
+    float: right ;
+    z-index: 3;
+  }
+
+  .question{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    right: 0;
+    left: 0;
+    font-family: 'Jaguar Bold';
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 62px;
+    margin-left: 444px;
+    padding-top: 200px;
+    line-height: 62px;
+    
+
+    
+  }
+
+  .flight-search{
+    position: absolute;
+    width: 1392px;
+    
+    height: 56px;
+    top: 388px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background: #FFFFFF;
+    box-shadow: 2px 2px 4px rgba(7, 4, 146, 0.15), 0px 24px 60px rgba(6, 47, 125, 0.05), 0px 12px 24px rgba(27, 59, 119, 0.05);
+    border-radius: 8px;
+
+    display: flex;
+    justify-content: space-between;
+
+    div{
+      display: flex;
+      justify-content: space-between;
+      left: 0;
+      top: 0;
+      align-items: center;
+
+      h6{
+        padding: 0;
+        margin-left: 15px;
+        left: 0;
+        top: 0;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+      }
+
+      .icon{
+        margin-left: 20px;
+      }
+
+      .btn{
+        background-color: #000000 ;
+        border-radius: 8px;
+        color: #FAFCFF;
+        border: none;
+        font-size: 16px;
+        line-height: 25px;
+        width: 144px;
+        height: 100%;
+        justify-content: center;
+        
+      }
+    }
+
+   
+
+    
+    
+  
+  }
   
 
 }
