fix: minor bugs and styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -90,14 +90,14 @@ header{
   .question{
     position: absolute;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     right: 0;
-    left: 0;
+    margin:0 64px;
     font-family: 'Jaguar Bold';
     text-transform: uppercase;
     font-size: 20px;
     line-height: 62px;
-    margin-left: 444px;
+    
     padding-top: 200px;
     line-height: 62px;
     
@@ -107,20 +107,44 @@ header{
 
   .flight-search{
     position: absolute;
-    width: 1392px;
-    
+    width: 1373px;
     height: 56px;
     top: 388px;
     right: 0;
     bottom: 0;
     left: 0;
-    margin: auto;
+    margin: 0 auto;
     background: #FFFFFF;
     box-shadow: 2px 2px 4px rgba(7, 4, 146, 0.15), 0px 24px 60px rgba(6, 47, 125, 0.05), 0px 12px 24px rgba(27, 59, 119, 0.05);
     border-radius: 8px;
 
     display: flex;
     justify-content: space-between;
+
+    
+    .from{
+      width: 388.5px;
+    }
+    .depart{
+      width: 252px;
+    }
+
+    .adult{
+      width: 200px;
+    }
+
+    .search-block{
+      border-right: #B7C1D2 1px solid;
+
+      
+      &:last-child {
+        border: 0;
+      }
+
+      &:nth-last-child(2){
+        border: 0;
+      }
+    }
 
     div{
       display: flex;
@@ -140,8 +164,27 @@ header{
         line-height: 25px;
       }
 
+      input{
+        border: 0;
+        margin-left: 8px;
+        
+      
+        &::placeholder{
+          color: #000000;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 25px;
+          
+        }
+
+
+      } 
+
       .icon{
         margin-left: 20px;
+        width: 32px;
+        height: 32px;
       }
 
       .btn{
@@ -154,6 +197,8 @@ header{
         width: 144px;
         height: 100%;
         justify-content: center;
+
+        
         
       }
     }
@@ -166,4 +211,15 @@ header{
   }
   
 
+}
+
+.recomended{
+  margin-top:837px;
+  position: relative;
+  background-color: #000000;
+  width: 100%;
+  height: 696px;
+  border-radius: 48px;
+  
+  
 }
